# vdf

./: Cargo.toml  LICENSE  LICENSE-APACHE  README.md  rust-toolchain
.circleci/: config.yml
benches/: nova.rs  vdf.rs
src/: lib.rs  minroot.rs  nova.rs  utils.rs
src/nova/: mod.rs  proof.rs  traits.rs
