[package]
name = "vdf"
version = "0.1.0"
authors = ["porcuquine <porcuquine@gmail.com>"]
edition = "2018"

[dependencies]
bellperson = "0.18.0"
crossbeam = "0.8"

ff = "0.11.0"
merlin = "2.0.0"
nova = { git = "https://github.com/porcuquine/nova", branch = "bellperson", package = "nova-snark" }
pairing = "0.21"
pasta_curves = "0.2.1"
rand = "0.8"
subtle = "2.3"

[dev-dependencies]
criterion = "0.3"
rand_xorshift = "0.3.0"

[[bench]]
name = "vdf"
harness = false

[[bench]]
name = "nova"
harness = false
