[package]
name = "vdf"
version = "0.1.0"
authors = ["porcuquine <porcuquine@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
bellperson = { version = "0.22", default-features = false }
crossbeam = "0.8"
ff = "0.12.0"
generic-array = "0.14.4"
merlin = "2.0.0"
neptune = { version = "7.2.0", default-features = false }
nova = { package = "nova-snark", version = "0.8.0", default-features = false }
pairing = "0.21"
pasta_curves = { version = "0.4.0", features = ["repr-c"] }
pasta-msm = "0.1.1"
rand = "0.8"
subtle = "2.3"

[dev-dependencies]
criterion = "0.3"
rand_xorshift = "0.3.0"

[[bench]]
name = "vdf"
harness = false

[[bench]]
name = "nova"
harness = false
